--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.17",
     "yup": "^1.7.1"
   },
