--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.8",
     "@types/node": "^24.9.1",
+    "@types/nodemailer": "^7.0.4",
     "dotenv": "^17.2.3",
     "mssql": "^12.0.0",
     "tsx": "^4.20.6",
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.11",
     "rate-limiter-flexible": "^9.0.0"
   }
 }
