--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
